@@ -1,6 +1,8 @@
 #include "../stdafx.h"
 #include "musicdatabaseDirectory.h"
 #include "../util.h"
+#include "musicdatabasedirectory/QueryParams.h"
+#include "../MusicDatabase.h"
 
 using namespace DIRECTORY;
 
@@ -88,7 +90,92 @@ void CMusicDatabaseDirectory::ClearDirectoryCache(const CStdString& strDirectory
 
 bool CMusicDatabaseDirectory::IsAllItem(const CStdString& strDirectory)
 {
-  if (strDirectory.Right(3).Equals("-1/"))
+  if (strDirectory.Right(4).Equals("/-1/"))
     return true;
   return false;
 }
+
+bool CMusicDatabaseDirectory::GetLabel(const CStdString& strDirectory, CStdString& strLabel)
+{
+  strLabel = "";
+
+  auto_ptr<CDirectoryNode> pNode(CDirectoryNode::ParseURL(strDirectory));
+  if (!pNode.get())
+    return false;
+
+  // first see if there's any filter criteria
+  CQueryParams params;
+  pNode->CollectQueryParams(params);
+
+  CMusicDatabase musicdatabase;
+  if (!musicdatabase.Open())
+    return false;
+
+  // get genre
+  CStdString strTemp;
+  if (params.GetGenreId() >= 0)
+  {
+    strTemp = "";
+    musicdatabase.GetGenreById(params.GetGenreId(), strTemp);
+    strLabel += strTemp;
+  }
+
+  // get artist
+  if (params.GetArtistId() >= 0)
+  {
+    strTemp = "";
+    musicdatabase.GetArtistById(params.GetArtistId(), strTemp);
+    if (!strLabel.IsEmpty())
+      strLabel += " / ";
+    strLabel += strTemp;
+  }
+
+  // get album
+  if (params.GetAlbumId() >= 0)
+  {
+    strTemp = "";
+    musicdatabase.GetAlbumById(params.GetAlbumId(), strTemp);
+    if (!strLabel.IsEmpty())
+      strLabel += " / ";
+    strLabel += strTemp;
+  }
+
+  if (strLabel.IsEmpty())
+  {
+    switch (pNode->GetChildType())
+    {
+    case NODE_TYPE_TOP100:
+      strLabel = g_localizeStrings.Get(271); // Top 100
+      break;
+    case NODE_TYPE_GENRE:
+      strLabel = g_localizeStrings.Get(135); // Genres
+      break;
+    case NODE_TYPE_ARTIST:
+      strLabel = g_localizeStrings.Get(133); // Artists
+      break;
+    case NODE_TYPE_ALBUM:
+      strLabel = g_localizeStrings.Get(132); // Albums
+      break;
+    case NODE_TYPE_ALBUM_RECENTLY_ADDED:
+    case NODE_TYPE_ALBUM_RECENTLY_ADDED_SONGS:
+      strLabel = g_localizeStrings.Get(359); // Recently Added Albums
+      break;
+    case NODE_TYPE_ALBUM_RECENTLY_PLAYED:
+    case NODE_TYPE_ALBUM_RECENTLY_PLAYED_SONGS:
+      strLabel = g_localizeStrings.Get(517); // Recently Played Albums
+      break;
+    case NODE_TYPE_ALBUM_TOP100:
+    case NODE_TYPE_ALBUM_TOP100_SONGS:
+      strLabel = g_localizeStrings.Get(10505); // Top 100 Albums
+      break;
+    case NODE_TYPE_SONG:
+      strLabel = g_localizeStrings.Get(134); // Songs
+      break;
+    case NODE_TYPE_SONG_TOP100:
+      strLabel = g_localizeStrings.Get(10504); // Top 100 Songs
+    }
+  }
+
+  return true;
+}
+
